@@ -2,17 +2,17 @@ genotypeToCharacter <- function(geno, alleleA=NULL, alleleB=NULL, sort=TRUE) {
   if (is.null(alleleA) | is.null(alleleB)) {
     geno[geno %in% 0] <- "B/B"
     geno[geno %in% 1] <- "A/B"
-    geno[geno %in% 2] <- "A/A"                
+    geno[geno %in% 2] <- "A/A"
   } else {
 
     stopifnot(length(alleleA) == length(alleleB))
-    
+
     geno.is.vec <- length(dim(geno)) < 2
     allele.single.char <- length(alleleA) == 1
     if (geno.is.vec & !allele.single.char) stopifnot(length(geno) == length(alleleA))
     if (!geno.is.vec & !allele.single.char) stopifnot(nrow(geno) == length(alleleA))
     if (!geno.is.vec & allele.single.char) stopifnot(nrow(geno) == length(alleleA))
-  
+
     alleleA <- as.character(alleleA)
     alleleB <- as.character(alleleB)
     aa <- paste(alleleA, alleleA, sep="/")
@@ -22,7 +22,11 @@ genotypeToCharacter <- function(geno, alleleA=NULL, alleleB=NULL, sort=TRUE) {
     } else {
       ab <- paste(alleleA, alleleB, sep="/")
     }
-    
+    ## if alleles are NA, genotype should be missing
+    aa[is.na(alleleA)] <- NA
+    bb[is.na(alleleB)] <- NA
+    ab[is.na(alleleA) | is.na(alleleB)] <- NA
+
     if (geno.is.vec & allele.single.char) {
       geno[geno %in% 0] <- bb
       geno[geno %in% 1] <- ab
@@ -30,7 +34,7 @@ genotypeToCharacter <- function(geno, alleleA=NULL, alleleB=NULL, sort=TRUE) {
     } else {
       if (geno.is.vec) {
         geno <- matrix(geno, ncol=1)
-      }        
+      }
       for (k in 1:ncol(geno)) {
         geno[geno[,k] %in% 0, k] <- bb[geno[,k] %in% 0]
         geno[geno[,k] %in% 1, k] <- ab[geno[,k] %in% 1]
